tests/NormalTests/paczka1/small_fuzzy/40243102.err
Error in line 3: q8nAdbRaBGO S811 -1,3
Error in line 2: q8nAdbRaBGO S811 33,1
Error in line 1: RP7zf9Qm A791 78,5
